--- a/libsession-util/src/main/cpp/CMakeLists.txt
+++ b/libsession-util/src/main/cpp/CMakeLists.txt
@@ -44,7 +44,12 @@ find_library( # Sets the name of the path variable.
         # you want CMake to locate.
         log)
 
-# Add the libsession-util library here
+# Copy libsodium-internal.so into the library output dir manually because gradle invokes cmake in
+# ways that doesn't properly do this:
+get_target_property(sodium_lib_loc libsodium-internal IMPORTED_LOCATION)
+add_custom_command(TARGET session_util POST_BUILD
+    COMMAND
+    ${CMAKE_COMMAND} -E copy ${sodium_lib_loc} ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
 
 # Specifies libraries CMake should link to your target library. You
 # can link multiple libraries, such as libraries you define in this
